--- a/src/app/pages/admin/claims-status/claims-status-detail/claims-status-detail.component.html
+++ b/src/app/pages/admin/claims-status/claims-status-detail/claims-status-detail.component.html
@@ -1,1 +1,38 @@
-<p>claims-status-detail works!</p>
+<nb-card>
+    <nb-card-body>
+        <form [formGroup]="form">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" nbInput fullWidth class="form-control" formControlName="description"
+                            placeholder="Descripción"
+                            [status]="(description?.errors?.required || description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''">
+                        <ngx-validation-message label="Nombre" [showMinLength]="description?.hasError('minlength')"
+                            [showMaxLength]="description?.hasError('maxlength')"
+                            [showRequired]="description?.errors?.required && description.touched"
+                            [showPattern]="description?.hasError('pattern') && description.touched" minLength=1 maxLength=255>
+                        </ngx-validation-message>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" nbInput fullWidth class="form-control" formControlName="flag"
+                            placeholder="Bandera"
+                            [status]="(flag?.errors?.required || flag?.hasError('minlength') || flag?.hasError('maxlength') || flag?.hasError('pattern')) && flag.touched ? 'danger' : ''">
+                        <ngx-validation-message label="Calle" [showMinLength]="flag?.hasError('minlength')"
+                            [showMaxLength]="flag?.hasError('maxlength')"
+                            [showRequired]="flag?.errors?.required && flag.touched"
+                            [showPattern]="flag?.hasError('pattern') && flag.touched" minLength=1 maxLength=255>
+                        </ngx-validation-message>
+                    </div>
+                </div>        
+            </div>
+            <div class="form-group">
+                <div class="d-flex justify-content-center">
+                    <button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                        (click)="register()">{{actionBtn}}</button>
+                </div>
+            </div>
+        </form>
+    </nb-card-body>
+</nb-card>
