--- a/src/app/pages/admin/drawers/drawer-list/drawer-list.component.html
+++ b/src/app/pages/admin/drawers/drawer-list/drawer-list.component.html
@@ -1,7 +1,7 @@
 <nb-card class="cat-card">
     <nb-card-header>
         <span class="title">
-            Lista de estatus siniestros
+            Lista de gavetas
         </span>
         <div class="add-select">
             <button (click)="openWindow()" nbButton status="primary">Nueva</button>
