--- a/src/app/pages/admin/score/score-list/score-list.component.html
+++ b/src/app/pages/admin/score/score-list/score-list.component.html
@@ -1,9 +1,8 @@
 <nb-card class="cat-card">
     <nb-card-header>
         <span class="title">
-            Puntuaciones
+            Lista de puntuaciones
         </span>
-
         <div class="add-select">
             <button (click)="openWindow()" nbButton status="primary">Nueva</button>
         </div>
@@ -18,7 +17,8 @@
                 <input type="text" formControlName="text" class="form-control" autofocus />
             </div>
         </div>
-        <ng2-smart-table [settings]="settings" [source]="rows" (delete)="onDeleteConfirm($event)"
+
+        <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
             (edit)="editRow($event)">
         </ng2-smart-table>
         <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
