--- a/src/app/pages/admin/storehouse/storehouse-detail/storehouse-detail.component.html
+++ b/src/app/pages/admin/storehouse/storehouse-detail/storehouse-detail.component.html
@@ -4,166 +4,75 @@
           <div class="row">
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="name"
-                          placeholder="Nombre"
-                          [status]="(name?.errors?.required || name?.hasError('minlength') || name?.hasError('maxlength') || name?.hasError('pattern')) && name.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Nombre" [showMinLength]="name?.hasError('minlength')"
-                          [showMaxLength]="name?.hasError('maxlength')"
-                          [showRequired]="name?.errors?.required && name.touched"
-                          [showPattern]="name?.hasError('pattern') && name.touched" minLength=1 maxLength=255>
+                      <input type="text" nbInput fullWidth class="form-control" formControlName="manager"
+                          placeholder="Responsable de la bodega"
+                          [status]="(manager?.errors?.required || manager?.hasError('minlength') || manager?.hasError('maxlength') || manager?.hasError('pattern')) && manager.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Responsable de la bodega" [showMinLength]="manager?.hasError('minlength')"
+                          [showMaxLength]="manager?.hasError('maxlength')"
+                          [showRequired]="manager?.errors?.required && manager.touched"
+                          [showPattern]="manager?.hasError('pattern') && manager.touched" minLength=1 maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="street"
-                          placeholder="Calle"
-                          [status]="(street?.errors?.required || street?.hasError('minlength') || street?.hasError('maxlength') || street?.hasError('pattern')) && street.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Calle" [showMinLength]="street?.hasError('minlength')"
-                          [showMaxLength]="street?.hasError('maxlength')"
-                          [showRequired]="street?.errors?.required && street.touched"
-                          [showPattern]="street?.hasError('pattern') && street.touched" minLength=1 maxLength=255>
+                      <input type="text" nbInput fullWidth class="form-control" formControlName="description"
+                          placeholder="Descripción"
+                          [status]="(description?.errors?.required || description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Descripción" [showMinLength]="description?.hasError('minlength')"
+                          [showMaxLength]="description?.hasError('maxlength')"
+                          [showRequired]="description?.errors?.required && description.touched"
+                          [showPattern]="description?.hasError('pattern') && description.touched" minLength=1 maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="noExt"
-                          placeholder="No Exterior"
-                          [status]="(noExt?.errors?.required || noExt?.hasError('minlength') || noExt?.hasError('maxlength') || noExt?.hasError('pattern')) && noExt.touched ? 'danger' : ''">
-                      <ngx-validation-message label="No exterior" [showMinLength]="noExt?.hasError('minlength')"
-                          [showMaxLength]="noExt?.hasError('maxlength')"
-                          [showRequired]="noExt?.errors?.required && noExt.touched"
-                          [showPattern]="noExt?.hasError('pattern') && noExt.touched" minLength=1 maxLength=255>
+                      <input type="text" nbInput fullWidth class="form-control" formControlName="municipality"
+                          placeholder="Código de municicpio de bodega ej. 1"
+                          [status]="(municipality?.errors?.required || municipality?.hasError('minlength') || municipality?.hasError('maxlength') || municipality?.hasError('pattern')) && municipality.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Código de municicpio de bodega ej. 1" [showMinLength]="municipality?.hasError('minlength')"
+                          [showMaxLength]="municipality?.hasError('maxlength')"
+                          [showRequired]="municipality?.errors?.required && municipality.touched"
+                          [showPattern]="municipality?.hasError('pattern') && municipality.touched" minLength=1 maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="noInt"
-                          placeholder="No Interior"
-                          [status]="(noInt?.errors?.required || noInt?.hasError('minlength') || noInt?.hasError('maxlength') || noInt?.hasError('pattern')) && noInt.touched ? 'danger' : ''">
-                      <ngx-validation-message label="No Interior" [showMinLength]="noInt?.hasError('minlength')"
-                          [showMaxLength]="noInt?.hasError('maxlength')"
-                          [showRequired]="noInt?.errors?.required && noInt.touched"
-                          [showPattern]="noInt?.hasError('pattern') && noInt.touched" minLength=1 maxLength=255>
+                      <input type="text" nbInput fullWidth class="form-control" formControlName="locality"
+                          placeholder="Código de localidad de bodega ej. 1"
+                          [status]="(locality?.errors?.required || locality?.hasError('minlength') || locality?.hasError('maxlength') || locality?.hasError('pattern')) && locality.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Código de localidad de bodega ej. 1" [showMinLength]="locality?.hasError('minlength')"
+                          [showMaxLength]="locality?.hasError('maxlength')"
+                          [showRequired]="locality?.errors?.required && locality.touched"
+                          [showPattern]="locality?.hasError('pattern') && locality.touched" minLength=1 maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="colony"
-                          placeholder="Colonia"
-                          [status]="(colony?.errors?.required || colony?.hasError('minlength') || colony?.hasError('maxlength') || colony?.hasError('pattern')) && colony.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Colonia" [showMinLength]="colony?.hasError('minlength')"
-                          [showMaxLength]="colony?.hasError('maxlength')"
-                          [showRequired]="colony?.errors?.required && colony.touched"
-                          [showPattern]="colony?.hasError('pattern') && colony.touched" minLength=1 maxLength=255>
+                      <input type="text" nbInput fullWidth class="form-control" formControlName="ubication"
+                          placeholder="Ubicación de la bodega"
+                          [status]="(ubication?.errors?.required || ubication?.hasError('minlength') || ubication?.hasError('maxlength') || ubication?.hasError('pattern')) && ubication.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Ubicación de la bodega" [showMinLength]="ubication?.hasError('minlength')"
+                          [showMaxLength]="ubication?.hasError('maxlength')"
+                          [showRequired]="ubication?.errors?.required && ubication.touched"
+                          [showPattern]="ubication?.hasError('pattern') && ubication.touched" minLength=1 maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="municipalDelegate"
-                          placeholder="Delegado Municipal"
-                          [status]="(municipalDelegate?.errors?.required || municipalDelegate?.hasError('minlength') || municipalDelegate?.hasError('maxlength') || municipalDelegate?.hasError('pattern')) && municipalDelegate.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Delegado Municipal"
-                          [showMinLength]="municipalDelegate?.hasError('minlength')"
-                          [showMaxLength]="municipalDelegate?.hasError('maxlength')"
-                          [showRequired]="municipalDelegate?.errors?.required && municipalDelegate.touched"
-                          [showPattern]="municipalDelegate?.hasError('pattern') && municipalDelegate.touched"
+                      <input type="number" nbInput fullWidth class="form-control" formControlName="idEntity"
+                          placeholder="Código de entidad"
+                          [status]="(idEntity?.errors?.required || idEntity?.hasError('minlength') || idEntity?.hasError('maxlength') || idEntity?.hasError('pattern')) && idEntity.touched ? 'danger' : ''">
+                      <ngx-validation-message label="Código de entidad"
+                          [showMinLength]="idEntity?.hasError('minlength')"
+                          [showMaxLength]="idEntity?.hasError('maxlength')"
+                          [showRequired]="idEntity?.errors?.required && idEntity.touched"
+                          [showPattern]="idEntity?.hasError('pattern') && idEntity.touched"
                           minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="postalCode"
-                          placeholder="Codigo postal"
-                          [status]="(postalCode?.errors?.required || postalCode?.hasError('minlength') || postalCode?.hasError('maxlength') || postalCode?.hasError('pattern')) && postalCode.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Codigo postal"
-                          [showMinLength]="postalCode?.hasError('minlength')"
-                          [showMaxLength]="postalCode?.hasError('maxlength')"
-                          [showRequired]="postalCode?.errors?.required && postalCode.touched"
-                          [showPattern]="postalCode?.hasError('pattern') && postalCode.touched" minLength=1
-                          maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="rfc"
-                          placeholder="RFC"
-                          [status]="(rfc?.errors?.required || rfc?.hasError('minlength') || rfc?.hasError('maxlength') || rfc?.hasError('pattern')) && rfc.touched ? 'danger' : ''">
-                      <ngx-validation-message label="RFC" [showMinLength]="rfc?.hasError('minlength')"
-                          [showMaxLength]="rfc?.hasError('maxlength')"
-                          [showRequired]="rfc?.errors?.required && rfc.touched"
-                          [showPattern]="rfc?.hasError('pattern') && rfc.touched" minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="phone"
-                          placeholder="Telefono"
-                          [status]="(phone?.errors?.required || phone?.hasError('minlength') || phone?.hasError('maxlength') || phone?.hasError('pattern')) && phone.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Telefono" [showMinLength]="phone?.hasError('minlength')"
-                          [showMaxLength]="phone?.hasError('maxlength')"
-                          [showRequired]="phone?.errors?.required && phone.touched"
-                          [showPattern]="phone?.hasError('pattern') && phone.touched" minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="phoneTwo"
-                          placeholder="Segundo telefono"
-                          [status]="(phoneTwo?.errors?.required || phoneTwo?.hasError('minlength') || phoneTwo?.hasError('maxlength') || phoneTwo?.hasError('pattern')) && phoneTwo.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Segundo telefono"
-                          [showMinLength]="phoneTwo?.hasError('minlength')"
-                          [showMaxLength]="phoneTwo?.hasError('maxlength')"
-                          [showRequired]="phoneTwo?.errors?.required && phoneTwo.touched"
-                          [showPattern]="phoneTwo?.hasError('pattern') && phoneTwo.touched" minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="fax"
-                          placeholder="Fax"
-                          [status]="(fax?.errors?.required || fax?.hasError('minlength') || fax?.hasError('maxlength') || fax?.hasError('pattern')) && fax.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Fax" [showMinLength]="fax?.hasError('minlength')"
-                          [showMaxLength]="fax?.hasError('maxlength')"
-                          [showRequired]="fax?.errors?.required && fax.touched"
-                          [showPattern]="fax?.hasError('pattern') && fax.touched" minLength=1 maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="typeOffice"
-                          placeholder="Tipo despacho"
-                          [status]="(typeOffice?.errors?.required || typeOffice?.hasError('minlength') || typeOffice?.hasError('maxlength') || typeOffice?.hasError('pattern')) && typeOffice.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Tipo despacho"
-                          [showMinLength]="typeOffice?.hasError('minlength')"
-                          [showMaxLength]="typeOffice?.hasError('maxlength')"
-                          [showRequired]="typeOffice?.errors?.required && typeOffice.touched"
-                          [showPattern]="typeOffice?.hasError('pattern') && typeOffice.touched" minLength=1
-                          maxLength=255>
-                      </ngx-validation-message>
-                  </div>
-              </div>
-              <div class="col-md-6">
-                  <div class="form-group">
-                      <input type="text" nbInput fullWidth class="form-control" formControlName="noRegistration"
-                          placeholder="Numero de registro"
-                          [status]="(noRegistration?.errors?.required || noRegistration?.hasError('minlength') || noRegistration?.hasError('maxlength') || noRegistration?.hasError('pattern')) && noRegistration.touched ? 'danger' : ''">
-                      <ngx-validation-message label="Numero de registro"
-                          [showMinLength]="noRegistration?.hasError('minlength')"
-                          [showMaxLength]="noRegistration?.hasError('maxlength')"
-                          [showRequired]="noRegistration?.errors?.required && noRegistration.touched"
-                          [showPattern]="noRegistration?.hasError('pattern') && noRegistration.touched" minLength=1
-                          maxLength=255>
                       </ngx-validation-message>
                   </div>
               </div>
