--- a/src/app/pages/admin/origin/origin-detail/origin-detail.component.html
+++ b/src/app/pages/admin/origin/origin-detail/origin-detail.component.html
@@ -108,6 +108,7 @@
                       (click)="register()">{{actionBtn}}</button>
               </div>
           </div>
+          </div>
       </form>
   </nb-card-body>
 </nb-card>
