--- a/src/app/pages/admin/safe/safe-detail/safe-detail.component.html
+++ b/src/app/pages/admin/safe/safe-detail/safe-detail.component.html
@@ -105,6 +105,7 @@
                       (click)="register()">{{actionBtn}}</button>
               </div>
           </div>
+  </div>
       </form>
   </nb-card-body>
 </nb-card>
