--- a/src/app/pages/admin/score/score-detail/score-detail.component.html
+++ b/src/app/pages/admin/score/score-detail/score-detail.component.html
@@ -68,6 +68,7 @@
                       (click)="register()">{{actionBtn}}</button>
               </div>
           </div>
+        </div>
       </form>
   </nb-card-body>
 </nb-card>
