Se modifico acmulado anual de bienes y recupera datos, faltan unos

--- a/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
+++ b/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
@@ -25,7 +25,7 @@
             <div class="col-sm-1">
               <div class="form-group">
                 <label for="inputLastName" class="label">&nbsp; </label>
-                <button (click)="openWindow()" nbButton status="warning" ghost>Ver Catálogo</button>
+                <button  (click)="openWindow2()" nbButton status="warning" ghost>Ver Catálogo</button>
               </div>
             </div>
             
@@ -50,7 +50,7 @@
             <div class="col-sm-1">
               <div class="form-group">
                 <label for="inputLastName" class="label">&nbsp; </label>
-                <button (click)="openWindow()" nbButton status="warning" ghost>Ver Catálogo</button>
+                <button (click)="openWindow2()" nbButton status="warning" ghost>Ver Catálogo</button>
               </div>
             </div>
 
@@ -78,7 +78,7 @@
             </div>
           </div>
 
-          <button (click)="openWindow()"nbButton status="primary">Imprimir</button>
+          <button (click)="openWindow2()" nbButton status="primary">Imprimir</button>
           
 
         </form>
