--- a/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
+++ b/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
@@ -1,88 +1,62 @@
 <nb-card>
-    <nb-card-body>
-      <form [formGroup]="form">
-  
-        <div class="form-group row">
-          <input type="text" nbInput maxlength="30" fullWidth formControlName="code"
-            placeholder="Código de serie ej. 1123"
-            [status]="(code?.errors?.required || code?.hasError('maxlength') || code?.hasError('pattern') ) && code.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="Código" 
-            [showMinLength]="code?.hasError('minlength')"
-            [showMaxLength]="code?.hasError('maxlength')"
-            [showRequired]="code?.errors?.required && code.touched"
-            [showPattern]="code?.hasError('pattern') && code.touched" minLength=1 maxLength=30>
-          </ngx-validation-message>
-        </div>
-        
-        <div class="form-group row">
-          <input type="string" nbInput fullWidth maxlength="1" formControlName="unaffordabilityCriterion"
-            placeholder="Criterio de incosteabilidad"
-            [status]="(unaffordabilityCriterion?.errors?.required || unaffordabilityCriterion?.hasError('minlength') || unaffordabilityCriterion?.hasError('maxlength') || unaffordabilityCriterion?.hasError('pattern')) && unaffordabilityCriterion.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="Criterio de incosteabilidad" 
-            [showMinLength]="unaffordabilityCriterion?.hasError('minlength')"
-            [showMaxLength]="unaffordabilityCriterion?.hasError('maxlength')"
-            [showPattern]="unaffordabilityCriterion?.hasError('pattern') && unaffordabilityCriterion.touched" minLength=1 maxLength=1>
-          </ngx-validation-message>
-        </div>
-  
-        <div class="form-group row">
-          <input type="text" nbInput fullWidth maxlength="200" formControlName="description"
-            placeholder="Descripción"
-            [status]="( description?.hasError('minlength') || description?.hasError('maxlength') || description?.hasError('pattern')) && description.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="Descripción" 
-            [showMinLength]="description?.hasError('minlength')"
-            [showMaxLength]="description?.hasError('maxlength')"
-            [showRequired]="description?.errors?.required && description.touched"
-            [showPattern]="description?.hasError('pattern') && description.touched" minLength=1 maxLength=200>
-          </ngx-validation-message>
-        </div>
-  
-        <div class="form-group row">
-          <input type="text" nbInput maxlength="4" fullWidth formControlName="subaccount"
-            placeholder="Subcuenta"
-            [status]="(subaccount?.errors?.required || subaccount?.hasError('minlength') || subaccount?.hasError('maxlength') || subaccount?.hasError('pattern')) && subaccount.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="Subcuenta" 
-            [showMinLength]="subaccount?.hasError('minlength')"
-            [showMaxLength]="subaccount?.hasError('maxlength')"
-            [showRequired]="subaccount?.errors?.required && subaccount.touched"
-            [showPattern]="subaccount?.hasError('pattern') && subaccount.touched" minLength=1 maxLength=4>
-          </ngx-validation-message>
-        </div>
-  
-        <div class="form-group row">
-          <input type="number" nbInput fullWidth formControlName="registryNumber"
-            placeholder="No. de registro"
-            [status]="(registryNumber?.hasError('pattern')) && registryNumber.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="No. de registro" 
-            [showPattern]="registryNumber?.hasError('pattern') && registryNumber.touched" minLength=1 maxLength=255 min=0>
-          </ngx-validation-message>
-        </div>
-  
-        <div class="form-group row">
-          <input type="text" nbInput fullWidth formControlName="cost"
-            placeholder="Costo"
-            [status]="(cost?.hasError('pattern')) && cost.touched ? 'danger' : ''"
-          />
-          <ngx-validation-message label="No. de registro" 
-            [showMinLength]="cost?.hasError('minlength')"
-            [showMaxLength]="cost?.hasError('maxlength')"
-            [showRequired]="cost?.errors?.required && cost.touched"
-            [showPattern]="cost?.hasError('pattern') && cost.touched" minLength=1 maxLength=4>
-          </ngx-validation-message>
-        </div>
-        
-        <div class="form-group">
-          <div class="d-flex justify-content-center">
-            <button type="submit" nbButton status="primary" [disabled]="!form.valid"
-              (click)="register()">{{actionBtn}}</button>
+  <nb-card-body>
+
+      <form [formGroup]="form"> <!--Modificar nombre para identificar y en el boton-->
+          <div class="row">
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">Delegación</label>
+                      <input nbInput fullWidth formControlName="description" placeholder="Nombre de Delegación">
+                  </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">SubDelegación</label>
+                      <input nbInput fullWidth disabled placeholder="nombre de SubDelegacion">
+                  </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">No.</label>
+                      <input nbInput fullWidth formControlName="id" placeholder="No. Delegacion">
+                  </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">No.</label>
+                      <input nbInput fullWidth disabled placeholder="No. Sub Delegacion" >
+                  </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">Fecha de recepción inicial</label>
+                      <input nbInput fullWidth disabled  placeholder="Fecha inicio">
+
+                  </div>
+              </div>
+
+              <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="inputFirstName" class="label">Fecha final</label>
+                      <input nbInput fullWidth disabled  placeholder="Fecha final">
+                  </div>
+              </div>
+              
           </div>
-        </div>
-        
+
+          <div class="form-group">
+              <div class="d-flex justify-content-center">
+                  <!--<button type="submit" nbButton status="primary" [disabled]="!form.valid"
+                      (click)="register()">{{actionBtn}}</button>  Boton con función--> 
+                      <button type="submit" nbButton status="primary" [disabled]="!form.valid">Imprimir Reporte</button>
+              </div>
+          </div>
       </form>
-    </nb-card-body>
-  </nb-card>
+
+  </nb-card-body>
+</nb-card>
