--- a/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-list/a-accumulated-assets-list.component.html
+++ b/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-list/a-accumulated-assets-list.component.html
@@ -1,38 +1,37 @@
 <nb-card class="cat-card">
-    <nb-card-header>
+  <nb-card-header>
+
       <span class="title">
-        Acumulado Anual de Bienes
+        Acumulado anual de bienes
       </span>
+
+<!-- Botón para agregar nuevo desactivado por que no lo requiere
       <div class="add-select">
-        <button (click)="openWindow()"nbButton status="primary">Nueva</button>
+          <button (click)="openWindow()" nbButton status="primary">Nueva</button>
       </div>
-    </nb-card-header>
-  
-    <nb-card-body>
+-->
+
+  </nb-card-header>
+
+  <nb-card-body>
+
       <div [formGroup]="searchForm" class="form-group row">
-        <div class="col-md-1 mt-2">
-          <label class="control-label">Buscar: </label>
-        </div>
-        <div class="col-md-4">
-          <input type="text" formControlName="text" class="form-control" autofocus />
-        </div>
+          <div class="col-md-1 mt-2">
+              <label class="control-label">Buscar: </label>
+          </div>
+          <div class="col-md-4">
+              <input type="text" formControlName="text" class="form-control" autofocus />
+          </div>
       </div>
-  
-      <ng2-smart-table 
-        [settings]="settings" 
-        [source]="list" 
-        (delete)="onDeleteConfirm($event)"    
-        (edit)="editRow($event)">
+
+      <ng2-smart-table [settings]="settings" [source]="list" (delete)="onDeleteConfirm($event)"
+          (edit)="editRow($event)">
       </ng2-smart-table>
-  
-      <mat-paginator 
-        [length]="length"
-        [pageSize]="pageSize"
-        [pageSizeOptions]="pageSizeOptions"
-        (page)="changesPage($event)"
-        [pageIndex] ="pageEvent.pageIndex"
-      ></mat-paginator>
-  
-    </nb-card-body>
-  </nb-card>
-  
+      
+      <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
+          (page)="changesPage($event)" [pageIndex]="pageEvent.pageIndex">
+      </mat-paginator>
+
+  </nb-card-body>
+
+</nb-card>
