--- a/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
+++ b/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-detail/a-accumulated-assets-detail.component.html
@@ -34,16 +34,16 @@
 
               <div class="col-md-6">
                   <div class="form-group">
-                    <label for="inputFirstName" class="label">Fecha de recepción inicial</label>
-                      <input nbInput fullWidth disabled  placeholder="Fecha inicio">
+                    <label for="inputFirstName" class="label">Año incial</label>
+                      <input nbInput fullWidth disabled  placeholder="Año inicial">
 
                   </div>
               </div>
 
               <div class="col-md-6">
                   <div class="form-group">
-                    <label for="inputFirstName" class="label">Fecha final</label>
-                      <input nbInput fullWidth disabled  placeholder="Fecha final">
+                    <label for="inputFirstName" class="label">Año final</label>
+                      <input nbInput fullWidth disabled  placeholder="Año final">
                   </div>
               </div>
               
