--- a/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-list/a-accumulated-assets-list.component.html
+++ b/src/app/pages/executive-processes/a-accumulated-assets/a-accumulated-assets-list/a-accumulated-assets-list.component.html
@@ -2,7 +2,7 @@
   <nb-card-header>
 
       <span class="title">
-        Acumulado anual de bienes
+        Reporte Acumulado de Bienes Anual
       </span>
 
 <!-- Botón para agregar nuevo desactivado por que no lo requiere
